--- a/pom.xml
+++ b/pom.xml
@@ -52,6 +52,21 @@
 		    <artifactId>tomcat-jasper</artifactId>
 		    <version>9.0.45</version>
 		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework.data/spring-data-jdbc -->
+		<dependency>
+		    <groupId>org.springframework.data</groupId>
+		    <artifactId>spring-data-jdbc</artifactId>
+		    <version>2.1.8</version>
+		</dependency>	
+		<dependency>
+   			<groupId>org.springframework.boot</groupId>
+   			<artifactId>spring-boot-starter-tomcat</artifactId>
+   			<scope>provided</scope>
+   		</dependency> 
+   		<dependency>
+        <groupId>javax.servlet</groupId>
+        <artifactId>jstl</artifactId>
+    </dependency>
 	</dependencies>
 
 	<build>
