--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,13 @@ spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/covid
 spring.datasource.username=root
 spring.datasource.password=password
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
+server.port=5000
 
-spring.mvc.view.prefix=/Views/
+#Azure SQL DB
+
+
+
+
+spring.mvc.view.prefix=/WEB-INF/jsp/
 spring.mvc.view.suffix=.jsp
 spring.mvc.static-path-pattern=/static/**
